envoyfilter-teaching/envoyfilter/tracing/ef-tracing-zipkin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: tracing
  namespace: istio-system
spec:
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        node:
          metadata:
            PROXY_CONFIG:
              tracing:
                zipkin:
                  address: zipkin.zipkin:9411
        tracing:
          http:
            name: envoy.tracers.zipkin
            typed_config:
              "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
              collector_cluster: outbound|9411||zipkin.zipkin.svc.cluster.local
              collector_endpoint: /api/v2/spans
              trace_id_128bit: true
              shared_span_context: false
              collector_endpoint_version: HTTP_JSON
